// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tic-Tac-Toe/Game All Circle 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          張
        </button>
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Winner: 張
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Game All Cross 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Winner: 半
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Game All Triangle 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          △
        </button>
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Winner: △
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Game Mix 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        >
          丁
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        >
          丁
        </button>
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          丁
        </button>
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        >
          半
        </button>
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Winner: 丁
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #1
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #2
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #3
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #4
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #5
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Game Usual 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next Player: 丁
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;
